{
    "name": "CarController",
    "maps": [
        {
            "name": "car",
            "id": "be1c02b4-4928-40c0-859b-d17dc985b6c1",
            "actions": [
                {
                    "name": "Steer",
                    "type": "PassThrough",
                    "id": "200d0755-f8b5-410d-bf56-513c81aee7d1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Steer1",
                    "type": "PassThrough",
                    "id": "f7eab907-129d-470f-b626-d9d7bc48cddd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3618bceb-1f59-4f7b-bc16-9948de8c1459",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c135f724-4f1d-4c3b-8f7f-5202d71d14cf",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steer1",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "car1",
            "id": "ee293cac-bac4-40ce-8e16-a79dc72d2515",
            "actions": [
                {
                    "name": "Brake",
                    "type": "Value",
                    "id": "cb75978b-35c3-445c-a9fc-15facf8400c6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SteerKeyboard",
                    "type": "Value",
                    "id": "7cd1726a-9d8c-4554-aea4-3dfe4bf96eb6",
                    "expectedControlType": "Digital",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DriveKeyboard",
                    "type": "Value",
                    "id": "d2e9e813-27ac-4959-a9d5-3a58dedea5d8",
                    "expectedControlType": "Digital",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "5d59879b-d02b-441a-b016-63b52b1a6cdf",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SteerKeyboard",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "02877c22-542e-420a-af03-1e3e38c95784",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SteerKeyboard",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "af78b281-1306-4a6f-8f13-51a3253ac565",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SteerKeyboard",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "3641df59-611f-44fb-9fef-62bf51c33961",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Brake",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "89cb1845-a77c-471b-acda-ad6452710792",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DriveKeyboard",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "6bfdf4a7-3775-46a8-a2f3-ae293d7ae069",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DriveKeyboard",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "9953ca7f-42cd-45ab-b377-2ca7b37cc8ae",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DriveKeyboard",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}